Do not display 'enable Bluetooth' message in system tray network overview.

Bug: 735642, 672263
Change-Id: I8b208ea48cba94a841f49c2d14c7d5960fb424f6
Reviewed-on: https://chromium-review.googlesource.com/592411
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490528}
Former-commit-id: de20d9079e26b7bd05b7ef31ebd1ae97a2de917e